--- a/OldBarom.Core.DLC.Domain/OldBarom.Core.DLC.Domain.csproj
+++ b/OldBarom.Core.DLC.Domain/OldBarom.Core.DLC.Domain.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Validation\DomainExceptionValidation.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Validation\DomainExceptionValidation.cs" />
+  </ItemGroup>
+
 </Project>
