--- a/OldBarom.Web.DLC.Main/OldBarom.Web.DLC.Main.csproj
+++ b/OldBarom.Web.DLC.Main/OldBarom.Web.DLC.Main.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OldBarom.Infra.DLC.IoC\OldBarom.Infra.DLC.IoC.csproj" />
+  </ItemGroup>
+
 </Project>
